--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,19 @@
-.Title {
-    flex-grow: 1;
+.Root {
+    margin: 18px 0 24px 0;
+}
+
+.Card {
+    margin: 0 0 8px 0;
+}
+
+.Confirmed-Card {
+    background-color: #ffc107;
+}
+
+.Recovered-Card {
+    background-color: #28a745;
+}
+
+.Deaths-Card {
+    background-color: #dc3545;
 }
