--- a/src/components/aboutUs/AboutUs.css
+++ b/src/components/aboutUs/AboutUs.css
@@ -48,7 +48,7 @@ p {
     background-image: url(https://placeimg.com/640/480/tech);
 }
 #photoProfil3 {
-    background-image: url(https://placeimg.com/640/480/tech);
+    background-image: url(./image/00000038106.jpg);
 }
 #photoProfil4 {
     background-image: url(./image/00000041084.jpg);
