--- a/src/components/aboutUs/AboutUs.css
+++ b/src/components/aboutUs/AboutUs.css
@@ -1,55 +1,53 @@
-h1{
-    text-align: center;
-    margin-top: 20px;
-}
-p {
-    font-weight: bold;
-}
-.About-wrap {
-    display: flex;
-    flex-direction: row-reverse;
-    justify-content: center;
-    margin-top: 50px;
-}
-.aboutus{
-    width:300px;
-    height:500px;
-    margin: auto;
-    text-align: center;
-    margin-top: 80px;
-    align-items: center;
-}
 .gitIcon{
     text-decoration: none;
     color: black;
     font-size: 30px;
     cursor: pointer;
 }
+
 .gitIcon:hover{
-   -webkit-transform: scale(0.85);
-   -moz-transform: scale(0.85);
-   -ms-transform: scale(0.85);
-   transform: scale(0.85);
- }
- .photo {
-    width:120px;
-    height: 120px;
-    text-align: center;
-    margin: auto;
-    line-height: 300px;
-    background-repeat: no-repeat;
+    -webkit-transform: scale(1.25);
+    -moz-transform: scale(1.25);
+    -ms-transform: scale(1.25);
+    transform: scale(1.25);
+}
+
+.photo {
+    width: 140px;
+    height: 140px;
     border-radius: 50%;
+    background-clip: padding-box;
+    background-size: cover;
+    background-position: center center;
+    margin: 12px auto 18px auto;
     box-shadow: 1px 1px 20px 1px rgb(88, 200, 245);
 }
+
+.logo {
+    width: 48px;
+    height: 48px;
+    background-clip: padding-box;
+    background-size: cover;
+    background-position: center center;
+    margin: 18px auto 4px auto;
+}
+
+#logo {
+    background-image: url(./images/orange.png);
+}
+
 #photoProfil1 {
     background-image: url(https://placeimg.com/640/480/tech);
 }
+
 #photoProfil2 {
     background-image: url(https://placeimg.com/640/480/tech);
 }
+
 #photoProfil3 {
-    background-image: url(https://placeimg.com/640/480/tech);
+    background-image: url(./images/00000041084.jpg);
 }
+
 #photoProfil4 {
-    background-image: url(./image/00000041084.jpg);
+    background-image: url(./images/00000040027.jpg);
 }
