adjusted some components

--- a/src/App.css
+++ b/src/App.css
@@ -22,7 +22,7 @@
 /*** FOOTER ***/
 .Footer {
     color: white;
-    background-color: rgb(44, 44, 175);
+    background-color: #3f51b5;
     padding: 3px;
     text-align: center;
 }
