--- a/src/App.css
+++ b/src/App.css
@@ -21,8 +21,20 @@
 
 /*** FOOTER ***/
 .Footer {
-    color: white;
+    color: #fff;
     background-color: #3f51b5;
-    padding: 3px;
+    padding: 16px;
     text-align: center;
+}
+
+.Sub-Footer {
+    background-color: #cccccc;
+    width: 100%;
+    padding: 16px;
+    text-align: center;
+    color: rgba(0, 0, 0, 0.87);;
+}
+
+.Sub-Footer a {
+    color: rgba(0, 0, 0, 0.87);;
 }
